# fsusort

./: .fsusortrc  CMakeLists.txt  makefile
cals/: detmap.tsv  detmap2.tsv  detmap_2crate.tsv  detmap_backup.tsv
hists/: makeHistograms.h  makeRawHistograms.h
include/: Clarion.h  GBuffer.h  GChannel.h  GDetector.h  GHistogramer.h  GPipeline.h  GThread.h  GWaveViewer.h  Gint.h  Gtypes.h  LaBr.h  Trinity.h  dataBlock.h  ddasHit.h  ddasLoop.h  evtFile.h  evtLoop.h  globals.h  physicsLoop.h
libraries/: CMakeLists.txt
libraries/GCore/: CMakeLists.txt  Gint.cxx  Gtypes.cxx
libraries/GFormat/: CMakeLists.txt  GChannel.cxx  Linkdef.h  dataBlock.cxx  ddasHit.cxx  evtFile.cxx
libraries/GHistogramer/: CMakeLists.txt  GHistogramer.cxx
libraries/GPhysics/: CMakeLists.txt  Clarion.cxx  LaBr.cxx  Linkdef.h  Trinity.cxx  physicsLoop.cxx
libraries/GPipeline/: CMakeLists.txt  GPipeline.cxx
libraries/GViewer/: CMakeLists.txt  GWaveViewer.cxx  Linkdef.h
libraries/ddasHit/: CMakeLists.txt  Linkdef.h
scripts/: scan.c  simpleSort.c
src/: eventBuildingTest.cxx  fsusort.cxx  physicsTest.cxx  simpleHists.cxx  speedTest.cxx  test_evtloop.cxx  waveformViewer.cxx
